force-app/main/default/objects/Batch_Settings__mdt/fields/Allow_Sending_Notification__c.field-meta.xml
<CustomField>
    <fullName>Allow_Sending_Notification__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Sending Notification</label>
    <type>Checkbox</type>
</CustomField>