force-app/main/default/objects/Batch_Settings__mdt/fields/Email_Subject__c.field-meta.xml
<CustomField>
    <fullName>Email_Subject__c</fullName>
    <label>Email Subject</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>