force-app/main/default/objects/Batch_Settings__mdt/fields/Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Profile_Id__c</fullName>
    <defaultValue>$Profile.Id</defaultValue>
    <label>Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>