force-app/main/default/objects/Batch_Settings__mdt/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <label>Sender</label>
    <type>Email</type>
</CustomField>